<resources>
    <string name="app_name">Practica Examen</string>
    <string name="tv_correo">Correo</string>
    <string name="tv_clave">Password</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_plato">Platos</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="msg_nombre">Nombre del platillo</string>
    <string name="msg_precio">$$$</string>
    <string name="msg_imagen">Imagen del Platillo</string>
    <string name="msg_telefono">Teléfono (9999–9999)</string>
    <string name="msg_web">Sitio Web</string>
    <string name="bt_agregar">Agregar</string>
    <string name="msg_plato_added">Plato agregado</string>
    <string name="msg_plato_updated">Plato actualizado</string>
    <string name="msg_data">Faltan datos!!</string>
    <string name="fb_agregar">Agregar Lista</string>
    <string name="menu_delete">Platillo</string>

    <string name="bt_update">Actualizar</string>
    <string name="deleted">Eliminado</string>
    <string name="si">SÍ</string>
    <string name="no">NO</string>
    <string name="seguroBorrar">¿Deseas borrar </string>


</resources>